--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.nhl.link.etl</groupId>
 	<artifactId>link-etl</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<name>Library: link-etl</name>
 	<description>Extract / Transform / Load (ETL) Framework</description>
@@ -28,7 +27,7 @@
 		<connection>scm:git:https://github.com/nhl/link-etl</connection>
 		<developerConnection>scm:git:ssh://git@github.com/nhl/link-etl</developerConnection>
 		<url>https://github.com/nhl/link-etl</url>
-		<tag>HEAD</tag>
+		<tag>link-etl-1.0</tag>
 	</scm>
 
 	<distributionManagement>
