--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 				<artifactId>derby</artifactId>
 				<version>10.10.1.1</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.2.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -149,6 +154,11 @@
 		<dependency>
 			<groupId>org.apache.cayenne</groupId>
 			<artifactId>cayenne-server</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
