--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
 		<slf4j-version>1.6.6</slf4j-version>
 		<cayenne-version>4.0.M3.debfa94</cayenne-version>
+		<jackson-version>2.6.3</jackson-version>
 	</properties>
 
 	<scm>
@@ -92,6 +93,16 @@
 				<groupId>org.apache.derby</groupId>
 				<artifactId>derby</artifactId>
 				<version>10.10.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson-version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -177,6 +188,16 @@
 		<dependency>
 			<groupId>org.apache.cayenne</groupId>
 			<artifactId>cayenne-server</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
