--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.nhl.link.move</groupId>
 	<artifactId>link-move</artifactId>
-	<version>1.6</version>
+	<version>1.7-SNAPSHOT</version>
 
 	<name>Library: link-move</name>
 	<description>A model-driven dynamically-configurable framework to acquire data 
@@ -49,7 +49,7 @@
 		<connection>scm:git:https://github.com/nhl/link-move</connection>
 		<developerConnection>scm:git:ssh://git@github.com/nhl/link-move</developerConnection>
 		<url>https://github.com/nhl/link-move</url>
-		<tag>link-move-1.6</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
