Split link-move into a multi-module Maven project, with specialized extractors in submodules #78

--- a/link-move-json/pom.xml
+++ b/link-move-json/pom.xml
@@ -10,32 +10,31 @@
         <version>1.7-SNAPSHOT</version>
     </parent>
 
-    <artifactId>link-move</artifactId>
-	<name>Library: link-move</name>
+    <artifactId>link-move-json</artifactId>
+    <name>Library: link-move-json</name>
+    <description>JSON extractor for link-move framework.</description>
 
     <dependencies>
+        <!-- required runtime dependencies -->
+        <dependency>
+            <groupId>com.nhl.link.move</groupId>
+            <artifactId>link-move</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
 
-		<!-- required runtime dependencies -->
 		<dependency>
-			<groupId>org.apache.cayenne</groupId>
-			<artifactId>cayenne-server</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
-		<!-- Optional dependencies. Apps that are using them will need to include
-			them explicitly in the POM, and also likely a corresponding service should
-			be included in the Tapestry module. The rest of the apps will be spared from
-			an extra jar. -->
-
-		<!-- Provided dependencies -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
-
-		<!-- unit test deps -->
+        <!-- unit test deps -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -56,5 +55,6 @@
 			<artifactId>derby</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+    </dependencies>
+
 </project>
