--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<modules>
 		<module>link-move</module>
+		<module>link-move-json</module>
 	</modules>
 
 	<name>Library: link-move (Parent)</name>
