--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.nhl.link.move</groupId>
-	<artifactId>parent</artifactId>
+	<artifactId>link-move-parent</artifactId>
 	<version>1.7-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
