Split link-move into a multi-module Maven project, with specialized extractors in submodules #78

--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>parent</artifactId>
         <groupId>com.nhl.link.move</groupId>
         <version>1.7-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>link-move</artifactId>
