Split link-move into a multi-module Maven project, with specialized extractors in submodules #78

--- a/link-move-json/pom.xml
+++ b/link-move-json/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>link-move-parent</artifactId>
         <groupId>com.nhl.link.move</groupId>
         <version>1.7-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
