--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>${jackson-version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-csv</artifactId>
+				<version>1.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
