--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -1,57 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>link-move-parent</artifactId>
-        <groupId>com.nhl.link.move</groupId>
-        <version>1.7-SNAPSHOT</version>
+	<parent>
+		<artifactId>link-move-parent</artifactId>
+		<groupId>com.nhl.link.move</groupId>
+		<version>1.7-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
-    </parent>
+	</parent>
 
-    <artifactId>link-move</artifactId>
+	<artifactId>link-move</artifactId>
 	<name>Library: link-move</name>
 
-    <dependencies>
+	<dependencies>
 
 		<!-- required runtime dependencies -->
 		<dependency>
 			<groupId>org.apache.cayenne</groupId>
 			<artifactId>cayenne-server</artifactId>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-
-	    <!-- Optional dependencies. Apps that are using them will need to include
-			them explicitly in the POM, and also likely a corresponding service should
-			be included in the Tapestry module. The rest of the apps will be spared from
-			an extra jar. -->
-
-		<!-- Provided dependencies -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<scope>provided</scope>
+			<artifactId>slf4j-api</artifactId>
+			<scope>compile</scope>
 		</dependency>
-
+		<!-- Bridging Cayenne logger to SLF -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<scope>compile</scope>
+		</dependency>
 
 		<!-- unit test deps -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
