--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 		<slf4j-version>1.7.21</slf4j-version>
 		<cayenne-version>4.0.M3</cayenne-version>
 		<jackson-version>2.6.3</jackson-version>
-		<apache-commons-version>1.3</apache-commons-version>
+		<apache-commons-csv-version>1.3</apache-commons-csv-version>
 	</properties>
 
 	<scm>
@@ -120,7 +120,7 @@
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-csv</artifactId>
-				<version>${apache-commons-version}</version>
+				<version>${apache-commons-csv-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
