--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
 	<licenses>
 		<license>
-			<name>BSD License</name>
-			<url>https://github.com/nhl/link-rest/blob/master/LICENSE.txt</url>
+			<name>Apache License</name>
+			<url>https://github.com/nhl/link-rest/blob/master/LICENSE</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
