--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
 		<snapshotRepository>
-			<id>l-snapshots</id>
+			<id>linkrest-snapshots</id>
 			<url>http://maven.objectstyle.org/nexus/content/repositories/linkrest-snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
