--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 		<connection>scm:git:https://github.com/nhl/link-move</connection>
 		<developerConnection>scm:git:ssh://git@github.com/nhl/link-move</developerConnection>
 		<url>https://github.com/nhl/link-move</url>
-		<tag>link-move-parent-1.7</tag>
+		<tag>1.x</tag>
 	</scm>
 
 	<distributionManagement>
