--- a/pom.xml
+++ b/pom.xml
@@ -160,9 +160,12 @@
 				</plugin>
 
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>2.9.1</version>
+					<configuration>
+						<!-- Fighting strict doclet... --> 
+						<additionalparam>-Xdoclint:none</additionalparam>
+					</configuration>
 				</plugin>
 
 				<plugin>
