--- a/pom.xml
+++ b/pom.xml
@@ -163,8 +163,7 @@
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>2.9.1</version>
 					<configuration>
-						<!-- Fighting strict doclet... --> 
-						<additionalparam>-Xdoclint:none</additionalparam>
+						<additionalparam>${javadoc.doclint.none}</additionalparam>
 					</configuration>
 				</plugin>
 
@@ -245,6 +244,15 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>java8-disable-strict-javadoc</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+			<properties>
+				<javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
+			</properties>
 		</profile>
 	</profiles>
 </project>
