--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>link-move-parent</artifactId>
 		<groupId>com.nhl.link.move</groupId>
-		<version>1.9</version>
+		<version>1.9-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
