--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 
 		<!-- Custom properties (mostly framework versions) -->
-		<slf4j-version>1.7.21</slf4j-version>
-		<cayenne-version>4.0.M5</cayenne-version>
+		<slf4j-version>1.7.25</slf4j-version>
+		<cayenne-version>4.0.B1</cayenne-version>
 		<jackson-version>2.6.3</jackson-version>
 		<apache-commons-csv-version>1.3</apache-commons-csv-version>
 	</properties>
@@ -103,11 +103,6 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j-version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4j-version}</version>
 			</dependency>
 			<dependency>
