--- a/pom.xml
+++ b/pom.xml
@@ -226,7 +226,7 @@
 	<!-- Optional profile used to sign artifacts -->
 	<profiles>
 		<profile>
-			<id>gpg</id>
+			<id>release</id>
 			<build>
 				<plugins>
 					<plugin>
