--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.nhl.link.move</groupId>
 	<artifactId>link-move-parent</artifactId>
-	<version>1.10</version>
+	<version>1.11-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -56,7 +56,7 @@
 		<connection>scm:git:https://github.com/nhl/link-move</connection>
 		<developerConnection>scm:git:ssh://git@github.com/nhl/link-move</developerConnection>
 		<url>https://github.com/nhl/link-move</url>
-		<tag>link-move-parent-1.10</tag>
+		<tag>1.x</tag>
 	</scm>
 
 	<distributionManagement>
