Switching LM to DataFrame
* CreateOrUpdateTask

--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -16,6 +16,11 @@
 
 		<!-- required runtime dependencies -->
 		<dependency>
+			<groupId>com.nhl.link.move</groupId>
+			<artifactId>link-move-dataframe</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.cayenne</groupId>
 			<artifactId>cayenne-server</artifactId>
 			<scope>compile</scope>
