Switch segments data structures to DataFrame #164
* replacing LM DF to YADF

--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -16,9 +16,9 @@
 
 		<!-- required runtime dependencies -->
 		<dependency>
-			<groupId>com.nhl.link.move</groupId>
-			<artifactId>link-move-dataframe</artifactId>
-			<version>${project.version}</version>
+			<groupId>com.nhl.yadf</groupId>
+			<artifactId>yadf</artifactId>
+			<version>${yadf-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cayenne</groupId>
