--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<cayenne-version>4.0</cayenne-version>
 		<jackson-version>2.9.8</jackson-version>
 		<apache-commons-csv-version>1.3</apache-commons-csv-version>
-		<yadf-version>1.0-SNAPSHOT</yadf-version>
+		<dflib-version>1.0-SNAPSHOT</dflib-version>
 	</properties>
 
 	<scm>
@@ -100,6 +100,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.nhl.dflib</groupId>
+				<artifactId>dflib</artifactId>
+				<version>${dflib-version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.cayenne</groupId>
 				<artifactId>cayenne-server</artifactId>
