--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<cayenne-version>4.0</cayenne-version>
 		<jackson-version>2.9.8</jackson-version>
 		<apache-commons-csv-version>1.3</apache-commons-csv-version>
-		<dflib-version>1.0-SNAPSHOT</dflib-version>
+		<dflib-version>0.6</dflib-version>
 	</properties>
 
 	<scm>
