--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
     - "master"
 
 jdk:
-  - oraclejdk8
+  - openjdk8
 
 script: 
   - mvn clean source:jar deploy --settings travis_settings.xml
