--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<!-- Custom properties (mostly framework versions) -->
 		<slf4j-version>1.7.25</slf4j-version>
 		<cayenne-version>4.0</cayenne-version>
-		<jackson-version>2.9.8</jackson-version>
+		<jackson-version>2.10.0.pr1</jackson-version>
 		<apache-commons-csv-version>1.3</apache-commons-csv-version>
 		<dflib-version>0.6</dflib-version>
 	</properties>
