--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -38,6 +38,11 @@
 
         <!-- unit test deps -->
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <scope>test</scope>
