--- a/link-move-json/pom.xml
+++ b/link-move-json/pom.xml
@@ -32,8 +32,12 @@
             <scope>compile</scope>
         </dependency>
 
-        <!-- unit test deps -->
-
+        <!-- Unit test dependencies -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
