--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<jackson-version>2.10.0.pr1</jackson-version>
 		<apache-commons-csv-version>1.3</apache-commons-csv-version>
 		<dflib-version>0.8</dflib-version>
+		<junit5.version>5.6.2</junit5.version>
 	</properties>
 
 	<scm>
@@ -119,19 +120,19 @@
 				</exclusions>
 			</dependency>
 			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>${junit5.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.cayenne</groupId>
 				<artifactId>cayenne-java8</artifactId>
 				<version>${cayenne-version}</version>
 			</dependency>
 			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.11</version>
-			</dependency>
-			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
-				<version>1.9.5-rc1</version>
+				<version>2.0.2-beta</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -173,11 +174,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<scope>test</scope>
@@ -201,7 +197,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.1.1</version>
+					<version>3.2.0</version>
 					<configuration>
 		                <!-- Java 8 is too strict about Javadoc omissions -->
 						<doclint>none</doclint>
@@ -217,33 +213,25 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.2.0</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
-					<version>2.5.3</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.maven.scm</groupId>
-							<artifactId>maven-scm-provider-gitexe</artifactId>
-							<!-- This version is necessary for use with git version 1.8.5 -->
-							<version>1.8.1</version>
-						</dependency>
-					</dependencies>
+					<version>3.0.0-M1</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M3</version>
+					<version>3.0.0-M5</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>3.0.0-M3</version>
+					<version>3.0.0-M5</version>
 					<executions>
 						<execution>
 							<id>integration-test</id>
