Extractor Schema v3 - new namespace and location #221
* v3 parser
* upgrading test extractors to the xsd V3

--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>bootique-cayenne42-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
