--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -27,7 +27,12 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
-        <!-- test deps -->
+        <!-- test dependencies -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>io.bootique.jdbc</groupId>
             <artifactId>bootique-jdbc-junit5-derby</artifactId>
